tests/valid/proc_ptr.fl
callback :: proc (a: i32) -> i32 {
  return a;
}

caller :: proc (callback: proc* (i32) -> i32, param: i32) -> i32 {
  return callback(param);
}

main :: proc () {
  x := caller(callback, 123);

  x = caller(proc(i32) -> i32 {
    b: i32 = 123;
    return b;
  }, 123);

  c := proc (x: i32) -> i32 {
    return (proc(x: i32) -> i32 { 
      return 123;
    })(x);
  };

  d := proc (x: i32) -> i32 {
    return (proc(x: i32) -> i32 { 
      return x;
    })(x);
  };

  x = caller(c, 123);
}
