tests/invalid/proc_as_type.fl
passthrough :: proc (a: i32) -> i32 {
	return a;
}

caller :: proc (callback: proc (i32) -> i32, param: i32) -> i32 {
	return callback(param);
}

main :: proc () {
	x := caller(passthrough, 123);

}
